# boostApp

./: .gitignore  CMakeLists.txt  README.md  build.sh
.github/workflows/: ci.yml
config/: boardcomm.conf  boardcomm.json  nvcomm.conf
config/nginx/: nvcomm.conf
config/systemd/: nvcommd.service
lib/boost/lib/: libboost_atomic.so.1.84.0  libboost_chrono.so.1.84.0  libboost_container.so.1.84.0  libboost_context.so.1.84.0  libboost_contract.so.1.84.0  libboost_coroutine.so.1.84.0  libboost_date_time.so.1.84.0  libboost_fiber.so.1.84.0  libboost_filesystem.so.1.84.0  libboost_iostreams.so.1.84.0  libboost_json.so.1.84.0  libboost_locale.so.1.84.0  libboost_log.so.1.84.0  libboost_log_setup.so.1.84.0  libboost_math_c99.so.1.84.0  libboost_math_c99f.so.1.84.0  libboost_math_c99l.so.1.84.0  libboost_math_tr1.so.1.84.0  libboost_math_tr1f.so.1.84.0  libboost_math_tr1l.so.1.84.0  libboost_nowide.so.1.84.0  libboost_program_options.so.1.84.0  libboost_random.so.1.84.0  libboost_regex.so.1.84.0  libboost_serialization.so.1.84.0  libboost_stacktrace_addr2line.so.1.84.0  libboost_stacktrace_backtrace.so.1.84.0  libboost_stacktrace_basic.so.1.84.0  libboost_stacktrace_noop.so.1.84.0  libboost_system.so.1.84.0  libboost_thread.so.1.84.0  libboost_timer.so.1.84.0  libboost_type_erasure.so.1.84.0  libboost_url.so.1.84.0  libboost_wave.so.1.84.0  libboost_wserialization.so.1.84.0
lib/boost/lib/cmake/boost_atomic-1.84.0/: boost_atomic-config.cmake
lib/boost/lib/cmake/boost_chrono-1.84.0/: boost_chrono-config.cmake
lib/boost/lib/cmake/boost_container-1.84.0/: boost_container-config.cmake
lib/boost/lib/cmake/boost_context-1.84.0/: boost_context-config.cmake
lib/boost/lib/cmake/boost_contract-1.84.0/: boost_contract-config.cmake
lib/boost/lib/cmake/boost_coroutine-1.84.0/: boost_coroutine-config.cmake
lib/boost/lib/cmake/boost_date_time-1.84.0/: boost_date_time-config.cmake
lib/boost/lib/cmake/boost_exception-1.84.0/: boost_exception-config.cmake
lib/boost/lib/cmake/boost_fiber-1.84.0/: boost_fiber-config.cmake
lib/boost/lib/cmake/boost_filesystem-1.84.0/: boost_filesystem-config.cmake
lib/boost/lib/cmake/boost_headers-1.84.0/: boost_headers-config.cmake
lib/boost/lib/cmake/boost_iostreams-1.84.0/: boost_iostreams-config.cmake
lib/boost/lib/cmake/boost_json-1.84.0/: boost_json-config.cmake
lib/boost/lib/cmake/boost_locale-1.84.0/: boost_locale-config.cmake
lib/boost/lib/cmake/boost_log-1.84.0/: boost_log-config.cmake
lib/boost/lib/cmake/boost_log_setup-1.84.0/: boost_log_setup-config.cmake
lib/boost/lib/cmake/boost_math_c99-1.84.0/: boost_math_c99-config.cmake
lib/boost/lib/cmake/boost_math_c99f-1.84.0/: boost_math_c99f-config.cmake
lib/boost/lib/cmake/boost_math_c99l-1.84.0/: boost_math_c99l-config.cmake
lib/boost/lib/cmake/boost_math_tr1-1.84.0/: boost_math_tr1-config.cmake
lib/boost/lib/cmake/boost_math_tr1f-1.84.0/: boost_math_tr1f-config.cmake
lib/boost/lib/cmake/boost_math_tr1l-1.84.0/: boost_math_tr1l-config.cmake
lib/boost/lib/cmake/boost_nowide-1.84.0/: boost_nowide-config.cmake
lib/boost/lib/cmake/boost_program_options-1.84.0/: boost_program_options-config.cmake
lib/boost/lib/cmake/boost_random-1.84.0/: boost_random-config.cmake
lib/boost/lib/cmake/boost_regex-1.84.0/: boost_regex-config.cmake
lib/boost/lib/cmake/boost_serialization-1.84.0/: boost_serialization-config.cmake
lib/boost/lib/cmake/boost_stacktrace_addr2line-1.84.0/: boost_stacktrace_addr2line-config.cmake
lib/boost/lib/cmake/boost_stacktrace_backtrace-1.84.0/: boost_stacktrace_backtrace-config.cmake
lib/boost/lib/cmake/boost_stacktrace_basic-1.84.0/: boost_stacktrace_basic-config.cmake
lib/boost/lib/cmake/boost_stacktrace_noop-1.84.0/: boost_stacktrace_noop-config.cmake
lib/boost/lib/cmake/boost_system-1.84.0/: boost_system-config.cmake
lib/boost/lib/cmake/boost_thread-1.84.0/: boost_thread-config.cmake
lib/boost/lib/cmake/boost_timer-1.84.0/: boost_timer-config.cmake
lib/boost/lib/cmake/boost_type_erasure-1.84.0/: boost_type_erasure-config.cmake
lib/boost/lib/cmake/boost_url-1.84.0/: boost_url-config.cmake
lib/boost/lib/cmake/boost_wave-1.84.0/: boost_wave-config.cmake
src/: namespace.hpp
src/app/nvcomm_cli/: line_editor.cpp  line_editor.hpp  main.cpp
src/app/nvcomm_pub/: main.cpp
src/app/nvcomm_sub/: main.cpp
src/app/nvcommd/: main.cpp
src/core/: application.cpp  application.hpp  config.cpp  config.hpp  debug_stats.hpp  http_util.cpp  http_util.hpp  json_util.cpp  json_util.hpp  logger.cpp  logger.hpp  request_id.cpp  request_id.hpp
src/domain/: message.hpp  packet.hpp
src/domain/gateway/: context.hpp  request.hpp  response.hpp
src/domain/ports/: event_store.hpp  handler.hpp  message_bus.hpp  middleware.hpp
src/infra/cli/: cli_context.hpp  cli_dispatcher.cpp  cli_dispatcher.hpp  cli_server.cpp  cli_server.hpp  telnet_util.cpp  telnet_util.hpp
src/infra/ipc/: message_codec.cpp  message_codec.hpp  message_queue_bus.cpp  message_queue_bus.hpp
src/infra/net/: http_server.cpp  http_server.hpp  io_context_pool.cpp  io_context_pool.hpp
src/infra/persistence/: file_event_store.cpp  file_event_store.hpp
src/platform/: cpu_affinity.cpp  cpu_affinity.hpp  paths.cpp  paths.hpp  systemd_notify.cpp  systemd_notify.hpp  watchdog.cpp  watchdog.hpp
src/service/: board_service.cpp  board_service.hpp  gateway_service.cpp  gateway_service.hpp  message_router.cpp  message_router.hpp  network_service.cpp  network_service.hpp  packet_processor.cpp  packet_processor.hpp
src/service/gateway/: gateway.cpp  gateway.hpp  router.cpp  router.hpp
src/service/gateway/handlers/: health_handler.cpp  health_handler.hpp  packet_handler.cpp  packet_handler.hpp
src/service/gateway/middleware/: access_log_middleware.cpp  access_log_middleware.hpp  auth_middleware.cpp  auth_middleware.hpp  body_limit_middleware.cpp  body_limit_middleware.hpp  rate_limit_middleware.cpp  rate_limit_middleware.hpp  request_id_middleware.cpp  request_id_middleware.hpp
tests/: test_assert.hpp  test_main.cpp  test_middleware.cpp  test_router.cpp  test_util.cpp
(+1 files in other folders)
